--- a/gig_reviews/templates/partials/reviews_section.html
+++ b/gig_reviews/templates/partials/reviews_section.html
@@ -15,7 +15,7 @@
 
               <div class="card-body">
                 <h5 class="card-title">{{ review.title }}</h5>
-                <p class="card-text">
+                <p class="card-text link">
                 Artist:
                   <a href="{% url 'artist' review.artist.pk %}" style="color:#F50000">
                     {{ review.artist.name }}
