Add the link class to  teh card-text in gallery Tidy up search reults blank return forced link hover as important in css

--- a/gig_reviews/templates/gig_reviews/gallery.html
+++ b/gig_reviews/templates/gig_reviews/gallery.html
@@ -18,7 +18,7 @@
                     {% endif %}
                     <div class="card-body text-center">
                         <h5 class="card-title">{{ review.title }}</h5>
-                        <p class="card-text">
+                        <p class="card-text link">
                             {% if review.artist %}
                             <strong>Artist:</strong>
                                 <a href="{% url 'artist' review.artist.pk %}" style="color:#F50000">{{ review.artist.name }}</a><br>
