--- a/gig_reviews/templates/gig_reviews/search_results.html
+++ b/gig_reviews/templates/gig_reviews/search_results.html
@@ -8,6 +8,8 @@
       <h1>Search Results</h1>
       {% if form.is_valid %}
         <h2>{{ form.cleaned_data.search_type|title }}</h2>
+      {% else %}
+        <p class="text-center mt-4">Tap the name of the artist or venue you want to find out about above and smash search!</p>  
       {% endif %}
     </div>
   </div>
@@ -34,13 +36,11 @@
           {% with reviews=item.reviews %}
             {% include 'partials/reviews_section.html' %}
           {% endwith %}
-        {% else %}
-          <p><em>No reviews for this {{ form.cleaned_data.search_type }}</em></p>
         {% endif %}
       </div>
     {% endfor %}
   {% else %}
-    <p class="text-center mt-4">Tap the name of the artist or venue you want to find out about above and smash search!</p>
+    <p class="text-center mt-4"><em>No reviews found</em></p>
   {% endif %}
 </div>
 {% endblock %}
