--- a/gig_reviews/templates/gig_reviews/artist.html
+++ b/gig_reviews/templates/gig_reviews/artist.html
@@ -2,13 +2,12 @@
 {% load static %}
 {% load cloudinary %}
 
-{% block title %}{{ artist.name }}'s Profile{% endblock %}
+{% block title %}{{ artist.name }}{% endblock %}
 
 {% block content %}
 <div class="container search-item py-4">
   <div class="row mx-auto justify-content-center">
     <div class="col-12 text-center">
-      <h1>{{ artist.name }}'s Profile</h1>
       {% if artist.logo %}
         <img src="{{ artist.logo.url }}" alt="{{ artist.name }}'s logo" class="img-fluid mb-3">
       {% else %}
