--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -274,8 +274,8 @@ form.d-flex input[type="text"] {
     font-size: 1.2rem;
     border: 1px solid #F50000;
     border-radius: 10px;
-    padding: 0.75rem;
-    margin-bottom: 1rem;
+    padding-top: 1rem;
+    margin-bottom: 0;
 }
 .card-img-top {
     width: 75%;
@@ -290,16 +290,71 @@ form.d-flex input[type="text"] {
 .card-text {
     color: #F5F5F5;
 }
-.tilt {
-    transform: rotate(-1.5deg);
-    transition: transform 0.3s ease;
+.tilt:nth-child(1)  { 
+    transform: rotate(3deg); 
 }
-.tilt:nth-child(2n) {
-    transform: rotate(1.5deg);
+.tilt:nth-child(2)  { 
+    transform: rotate(-4deg); 
+}
+.tilt:nth-child(3)  { 
+    transform: rotate(2deg); 
+}
+.tilt:nth-child(4)  { 
+    transform: rotate(-2deg); 
+}
+.tilt:nth-child(5)  { 
+    transform: rotate(5deg); 
+}
+.tilt:nth-child(6)  { 
+    transform: rotate(-3deg);
+ }
+.tilt:nth-child(7)  { 
+    transform: rotate(1deg); 
+}
+.tilt:nth-child(8)  { 
+    transform: rotate(-1deg); 
+}
+.tilt:nth-child(9)  { 
+    transform: rotate(4deg); 
+}
+.tilt:nth-child(10) { 
+    transform: rotate(-5deg); 
+}
+.tilt:nth-child(11) { 
+    transform: rotate(-4deg); 
+}
+.tilt:nth-child(12) { 
+    transform: rotate(2deg); 
+}
+.tilt:nth-child(13) { 
+    transform: rotate(-2deg); 
+}
+.tilt:nth-child(14) { 
+    transform: rotate(5deg); 
+}
+.tilt:nth-child(15) { 
+    transform: rotate(-3deg); 
+}
+.tilt:nth-child(16) { 
+    transform: rotate(1deg); 
+}
+.tilt:nth-child(17) { 
+    transform: rotate(-1deg); 
+}
+.tilt:nth-child(18) { 
+    transform: rotate(4deg); 
+}
+.tilt:nth-child(19) { 
+    transform: rotate(-5deg); 
+}
+.tilt:nth-child(20) { 
+    transform: rotate(3deg); 
+}
+.tilt {
+  transition: transform 0.3s ease;
 }
 .tilt:hover {
-    transform: rotate(0deg) scale(1.02);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: rotate(0deg) scale(1.05);
 }
 .horns {
     max-height: 100px;
